<resources>
    <string name="app_name">Sunday Coder</string>
    <string name="Eject">Eject</string>
    <string name="You_Have_Crashed">You\'ve Crashed</string>
    <string name="Main_Menu">Main Menu</string>
    <string name="Restart_Button">Try Again</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="CS_125_Sunday_Driver">CS 125 Sunday Driver</string>
    <string name="cs_crest">Code of Arms</string>
    <string name="Exit_Game">Exit Game</string>
    <string name="Start_Game">Start Game</string>
    <string name="Image_View">Crash Menu</string>
    <string name="roadAnimation">Road Animation</string>
    <string name="skrt">Skrrrt</string>
    <string name="introtocsmeme">introtocsmeme</string>
</resources>
