<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CS_125_Sunday_Driver"
        android:textSize="36sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/mainmenu-imageView"
        android:layout_width="match_parent"
        android:layout_height="338dp"
        android:contentDescription="@string/cs_crest"
        app:srcCompat="@mipmap/ic_launcher" />

    <Button
        android:id="@+id/exitgame-button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Exit_Game" />

    <Button
        android:id="@+id/startgame-button"
        android:layout_width="match_parent"
        android:layout_height="339dp"
        android:text="@string/Start_Game" />
</LinearLayout>