<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/game"
        android:layout_width="match_parent"
        android:layout_height="186dp"
        android:text="@string/You_Have_Crashed"
        android:textSize="48sp" />

    <Button
        android:id="@+id/mainmenubutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Main_Menu" />

    <Button
        android:id="@+id/restartbutton"
        android:layout_width="match_parent"
        android:layout_height="448dp"
        android:text="@string/Restart_Button" />
</LinearLayout>